feat(discordjs): install and scaffold basic infrastructure, added first nonsense cmd

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "exclude": ["dist", "node_modules", "**/*.spec.ts"]
+  "exclude": ["dist", "node_modules"]
 }
