--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nodejs-boilerplate",
+  "name": "plask-bot",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "start": "node dist",
     "eslint": "eslint ./src/**/*.ts",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
@@ -13,15 +13,17 @@
   "author": "sindrekjr",
   "license": "Unlicense",
   "devDependencies": {
-    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2",
     "typescript-eslint": "0.0.1-alpha.0"
+  },
+  "dependencies": {
+    "discord.js": "^12.5.1",
+    "discord.js-commando": "^0.12.2",
+    "svada": "^1.0.3"
   }
 }
