--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "sindrekjr",
   "license": "Unlicense",
   "devDependencies": {
-    "@types/node": "^14.14.9",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.14.0",
-    "typescript": "^4.1.2",
+    "eslint": "^7.21.0",
+    "typescript": "^4.2.2",
     "typescript-eslint": "0.0.1-alpha.0"
   },
   "dependencies": {
