--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -23,6 +23,9 @@ rules:
   'keyword-spacing': error
   'no-trailing-spaces': error
   'prefer-const': error
+  'quotes':
+    - error
+    - single
   'semi': 
     - error
     - always
