--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist",
+    "test": "jest",
     "eslint": "eslint ./src/**/*.ts",
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
@@ -14,11 +15,15 @@
   "license": "Unlicense",
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.21.0",
+    "eslint-plugin-jest": "^24.1.5",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.3",
     "typescript": "^4.2.2",
     "typescript-eslint": "0.0.1-alpha.0"
   },
